--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
+  <head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>JavaScript</title>
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-		<div class="box" id="box"></div>
-		<button>1</button>
-		<button>2</button>
-		<button>3</button>
-		<button>4</button>
-		<button>5</button>
+		<link rel="stylesheet" href="css/css.css">
+  </head>
+  <body>
+	  	<div class="overlay">
+			<button id="btn"> Нажми меня </button>
+		  </div>
+		<button> Нажми меня </button>
+		<button> Нажми меня </button>
 
-		<div class="circle"></div>
-		<div class="circle"></div>
-		<div class="circle"></div>
-
-		<div class="wrapper">
-			<div class="heart"></div>
-			<div class="heart"></div>
-            <div class="heart"></div>
-
-		</div>
+    	<a href="https://www.youtube.com/">https://www.youtube.com/</a>
 
 		<script src="js/script.js"></script>
-	</body>
+  </body>
 </html>
