Динамические скрипты async , defer (lessons_35)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="box">
-        Touch me!
-    </div>
+
+    <p> please help me </p>
+    <p>Thank you bro</p>
+
+
+    <!--? async - можно переность скрип в head с помощью него скрипты будут загружатся в зависимиости от размера. defer - также можно разместить в head скрипты загружаються в фоновом режиме не прерывая цепочку построяния нашей страницы , скрипт идущий за другим будет загружен после стого как выполнеться первый скрипт  -->
     <script src="js/script.js"></script>
 </body>
 </html>
