Class list and event delegation (lessons_37)

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="first" class="btn-block">
+        <button class="blue some"></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+    </div>
 
-    <p> please help me </p>
-    <p>Thank you bro</p>
-
-
-    <!--? async - можно переность скрип в head с помощью него скрипты будут загружатся в зависимиости от размера. defer - также можно разместить в head скрипты загружаються в фоновом режиме не прерывая цепочку построяния нашей страницы , скрипт идущий за другим будет загружен после стого как выполнеться первый скрипт  -->
-    <script src="js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
