Скрипты и время их выполнения SetTimeout and SetInterval(lessons_39)

--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/css.css">
-    <title>Document</title>
-</head>
-<body>
-    <div id="first" class="btn-block">
-        <button class="blue some"></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   	<title>Java Script</title>
+   	<link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body>
+    <button class="btn">Animation</button>
+    <button class="btn">Back</button>
+    <div class="wrapper">
+        <div class="box"></div>
     </div>
 
-<script src="js/script.js"></script>
-</body>
+	<script src="js/script.js"></script>
+  </body>
 </html>
